# rc-20-clone

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: build.yml
scripts/: install-macos.sh  install-windows.ps1  pluginval-disabled-tests.txt  run-install.bat
source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
source/dsp/: DriftGenerator.cpp  DriftGenerator.h  ModulatedDelayLine.cpp  ModulatedDelayLine.h
source/modules/: DistortionModule.cpp  DistortionModule.h  EffectModule.h  LimitModule.cpp  LimitModule.h  MagicModule.cpp  MagicModule.h  NoiseModule.cpp  NoiseModule.h  SpaceModule.cpp  SpaceModule.h  WobbleModule.cpp  WobbleModule.h
source/parameters/: ParameterIDs.h
source/ui/: ModuleComponent.cpp  ModuleComponent.h  PresetSelector.cpp  PresetSelector.h  RC20LookAndFeel.cpp  RC20LookAndFeel.h
